# Deep_Research_f

./: README.md  env.example  pyproject.toml  requirements.txt
src/: __init__.py  dataclasses.py  main_process.py  multi_agent_supervisor.py  pricing_calculator.py  prompts.py  red_team_evaluator.py  report_productor.py  research_agent.py  research_agent_full.py  research_agent_scope.py  run_logger.py  state_research.py  state_scope.py  usage_tracker.py  utils.py
tasks/: Investigate_competitors.py  collect_cpp_compiler_error_data.py  investigate_beast2_ci.py  investigate_boost_spike.py  investigate_cursor_plans.py  investigate_mit.py  investigate_ragaas.py
