[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research"
version = "0.1.0"
description = "Multi-agent research system using Self-Balancing Agentic AI"
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
"langgraph>=0.5.4",
"langchain>=0.3.0",
"langchain-openai>=0.2.0",
"langchain-anthropic>=0.3.0",
"langchain_community>=0.3.27",
"langchain_tavily>=0.2.7",
"langchain_mcp_adapters>=0.1.9",
"pydantic>=2.0.0",
"rich>=14.0.0",
"jupyter>=1.0.0",
"ipykernel>=6.20.0",
"tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[tool.setuptools]
packages = ["deep_research"]

[tool.setuptools.package-dir]
deep_research = "src"
